--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "request": "^2.88.2",
     "socket.io": "^4.3.1"
   },
