--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "comp3207",
-  "version": "1.0.0",
-  "description": "Group Coursework \"Cloud Technologies Prototype\"",
-  "main": "app.js",
-  "engines": {
-    "node": "16.x"
-  },
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xrybrsx/COMP3207.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.24.0",
-    "body-parser": "^1.19.1",
-    "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
-    "request": "^2.88.2",
-    "socket.io": "^4.3.1"
-  },
-  "bugs": {
-    "url": "https://github.com/xrybrsx/COMP3207/issues"
-  },
-  "homepage": "https://github.com/xrybrsx/COMP3207#readme"
+    "name": "comp3207",
+    "version": "1.0.0",
+    "description": "Group Coursework \"Cloud Technologies Prototype\"",
+    "main": "app.js",
+    "engines": {
+        "node": "16.x"
+    },
+    "scripts": {
+        "start": "node app.js",
+        "gdeploy": "gcloud app deploy -v test",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/xrybrsx/COMP3207.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.24.0",
+        "body-parser": "^1.19.1",
+        "cookie-parser": "^1.4.6",
+        "ejs": "^3.1.6",
+        "express": "^4.17.2",
+        "express-ejs-layouts": "^2.5.1",
+        "express-session": "^1.17.2",
+        "request": "^2.88.2",
+        "socket.io": "^4.3.1"
+    },
+    "bugs": {
+        "url": "https://github.com/xrybrsx/COMP3207/issues"
+    },
+    "homepage": "https://github.com/xrybrsx/COMP3207#readme"
 }
